# SalaryToMail

./: CMakeLists.txt
data/: ds.xlsx  ss.xlsx
res/: res.qrc
src/: data.cpp  data.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  readexcelfile.cpp  readexcelfile.hpp
ui/: mainwindow.ui
